# homework15

./: CMakeLists.txt  kkmeans_star_ex.txt  main.cpp
